--- a/index.html
+++ b/index.html
@@ -222,24 +222,26 @@
               </li>
             </ul>
           </div>
-          <p class="footer__copyright">
-            &copy; Copyright 2018 Huddle. All rights reserved.
-          </p>
-          <p class="footer__attribution">
-            Challenge by
-            <a
-              class="footer__attribution-link"
-              href="https://www.frontendmentor.io?ref=challenge"
-              target="_blank"
-              >Frontend Mentor</a
-            >. Coded by
-            <a
-              class="footer__attribution-link"
-              href="https://github.com/rafo38kh"
-              target="_blank"
-              >rafo38kh</a
-            >.
-          </p>
+          <div class="footer__wrapper">
+            <p class="footer__copyright">
+              &copy; Copyright 2018 Huddle. All rights reserved.
+            </p>
+            <p class="footer__attribution">
+              Challenge by
+              <a
+                class="footer__attribution-link"
+                href="https://www.frontendmentor.io?ref=challenge"
+                target="_blank"
+                >Frontend Mentor</a
+              >. Coded by
+              <a
+                class="footer__attribution-link"
+                href="https://github.com/rafo38kh"
+                target="_blank"
+                >rafo38kh</a
+              >.
+            </p>
+          </div>
         </div>
       </div>
     </footer>
